--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
                   </ul>
             </div>
             <div class="col 6">
-                <h4>Who am I?</h4>
-                <p>My name is Eden Stapleton, I am a junior web designer who has done two years of web design, and collaborated for three years
-                    with other volunteer web designers/developers. I recieved an Associates Degree in Arts from Central Piedmont Community College, and from there I 
-                    went on to achieve a Certificate of Completion in Java from CodeCademy, as well as a Certifcate of Completion in SQL. 
-                    I am someone who is willing to learn; and I contnously strive to learn more about, as well as improve the small skills I have, in web design and web development. 
-                    Thank you so much for stopping by! 
+                <h4>Salutations!</h4>
+                <p>I am Eden Stapleton, Welcome to my portfolio site! I am a former volunteer web designer/developer who is polishing my skills, 
+                    and making a site where I can showcase some projects I am currently working on (And if I'm lucky, maybe I can find a few I have worked on in the past). 
+                    This site is a little bare bones at the moment, feel free to check back as more projects are added.
                 </p>    
             </div>
             <div class="col 2">
